# artisania-backend

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  cli.py  config.py  main.py  pyproject.toml
data/: schema.sql
db/: conn.py
routers/: auth.py
services/agenda/: README.md
services/auth/: magic_link.py
services/devis/: README.md  __init__.py  test_validation.py  validation.py
services/notifications/: mailjet_notifier.py  sinch_notifier.py
services/relances/: README.md  __init__.py  cli.py  composite_notifier.py  engine.py  mailjet_notifier.py  messages.py  sinch_notifier.py  test_cli.py  test_composite_notifier.py  test_engine.py  test_mailjet_notifier.py  test_messages.py  test_sinch_notifier.py
templates/: base.html
tests/: test_health.py  test_notifiers.py
